fix: :hammer: pop up dark mode, resources tiles

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,10 @@
     @apply p-1
 }
 
+.modal-content{
+    @apply dark:!bg-gray-700 !bg-gray-200 !border-0
+}
+
 *{
     scroll-behavior: smooth;
 }
